@@ -725,6 +725,8 @@ Release 2.8.0 - UNRELEASED
     HADOOP-12189. Improve CallQueueManager#swapQueue to make queue elements
     drop nearly impossible. (Zhihai Xu via wang)
 
+    HADOOP-12259. Utility to Dynamic port allocation (brahmareddy via rkanter)
+
   OPTIMIZATIONS
 
     HADOOP-11785. Reduce the number of listStatus operation in distcp
